- Corrigido estilo de código. - Adicionado rota de remover inscrição. - Criado mais testes funcionais. - Melhorado redirect para swagger. - Regerado swagger.
